<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.AddStoryActivity">

    <ImageView
        android:id="@+id/preview_img"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:srcCompat="@drawable/ic_img_box"
        android:contentDescription="@string/add_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/ed_description"
        />


    <Button
        android:id="@+id/camera_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="96dp"
        android:text="@string/add_story_camera"
        app:layout_constraintBottom_toTopOf="@+id/upload_button"
        app:layout_constraintStart_toStartOf="parent" />


    <Button
        android:id="@+id/gallery_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="96dp"
        android:text="@string/add_story_gallery"
        app:layout_constraintBottom_toTopOf="@+id/upload_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ed_description"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/ed_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/et_box"
        android:paddingStart="10dp"
        android:paddingTop="10dp"
        android:paddingEnd="5dp"
        android:paddingBottom="10dp"
        app:layout_constraintBottom_toTopOf="@+id/camera_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

   <Button
       android:id="@+id/upload_button"
       android:layout_width="0dp"
       android:layout_height="wrap_content"
       android:text="@string/add_story_upload"
       android:layout_marginStart="10dp"
       android:layout_marginEnd="10dp"
       android:layout_marginBottom="10dp"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintBottom_toBottomOf="parent"
       />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible"
        />




</androidx.constraintlayout.widget.ConstraintLayout>